<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_muesta_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="mx.com.rteck.datospersonales.MuestaDatos">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_confirmar"
        android:textStyle="bold"
        android:textSize="@dimen/texto_titulo"
        android:textAlignment="center"
        android:id="@+id/tvTitulo"
        android:layout_marginBottom="@dimen/margin_titulo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNombre"
        android:text="@string/text_nombre"
        android:textSize="@dimen/texto_datos"
        android:layout_marginBottom="@dimen/margin_datos"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tviFecha"
            android:text="@string/text_fecha"
            android:textStyle="bold"
            android:textSize="@dimen/texto_datos"
            android:layout_marginBottom="@dimen/margin_datos"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFecha"
            android:text="@string/fecha"
            android:textSize="@dimen/texto_datos"
            android:layout_marginBottom="@dimen/margin_datos"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tviTelefono"
            android:text="@string/text_telefono"
            android:textStyle="bold"
            android:textSize="@dimen/texto_datos"
            android:layout_marginBottom="@dimen/margin_datos"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTelefono"
            android:text="@string/telefono"
            android:textSize="@dimen/texto_datos"
            android:layout_marginBottom="@dimen/margin_datos"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tviEmail"
            android:text="@string/text_email"
            android:textStyle="bold"
            android:textSize="@dimen/texto_datos"
            android:layout_marginBottom="@dimen/margin_datos"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail"
            android:text="@string/email"
            android:textSize="@dimen/texto_datos"
            android:layout_marginBottom="@dimen/margin_datos"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tviDescripcion"
            android:text="@string/text_descripcion"
            android:textStyle="bold"
            android:textSize="@dimen/texto_datos"
            android:layout_marginBottom="@dimen/margin_datos"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescripcion"
            android:text="@string/descripcion"
            android:textSize="@dimen/texto_datos"
            android:layout_marginBottom="@dimen/margin_datos"
            />
    </LinearLayout>

    <Button
        android:id="@+id/Miboton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo"
        android:text="@string/btn_editar"
        android:onClick="Regresar"
        android:theme="@style/MiBotonRaised"
        />


</LinearLayout>
