<?xml version="1.0" encoding="utf-8"?>



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="mx.com.rteck.datospersonales.MainActivity"
        android:padding="5dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_nombre"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inp_nombre"
                android:inputType="text"
                />

        </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_cumpleaños"
        android:layout_marginLeft="@dimen/margin_cumpleaños"
        />

    <android.widget.DatePicker
        android:id="@+id/date_picker"
        android:calendarViewShown="false"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:datePickerMode="spinner"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/inp_telefono"
                android:hint="@string/input_telefono"/>



        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/inp_email"
                android:hint="@string/input_email"/>



        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/inp_descripcion"
                android:hint="@string/input_descripcion"/>



        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/Miboton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitulo"
            android:text="@string/btn_siguiente"
            android:theme="@style/MiBotonRaised"
            android:onClick="Siguiente"
            />

    </LinearLayout>



